--- a/pom.xml
+++ b/pom.xml
@@ -6,4 +6,19 @@
   <packaging>pom</packaging>
   <name>university</name>
   <description>Main project</description>
+  <modules>
+  	<module>university-course</module>
+  	<module>university-ear</module>
+  </modules>
+  <build>
+  <plugins>
+        <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>1.7</source>
+                <target>1.7</target>
+            </configuration>
+        </plugin>
+    </plugins>
+  </build>
 </project>
