--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
   <modules>
   	<module>university-course</module>
   	<module>university-ear</module>
+  	<module>university-student</module>
+  	<module>university-test</module>
   </modules>
   <build>
   <plugins>
@@ -21,4 +23,13 @@
         </plugin>
     </plugins>
   </build>
+  <dependencyManagement>
+  	<dependencies>
+  		<dependency>
+  			<groupId>junit</groupId>
+  			<artifactId>junit</artifactId>
+  			<version>4.11</version>
+  		</dependency>
+  	</dependencies>
+  </dependencyManagement>
 </project>
